# email_delivery_system

./: Cargo.toml  configs.yml
scripts/: init_db.sh
src/: configs.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check_tests.rs
